# libvalkey

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  README.md  REUSE.toml
.github/: wordlist.txt
.github/workflows/: build.yml  ci.yml  coverity.yml  db-compatibility.yml  release-drafter.yml  reuse.yml  spellcheck.yml  test.yml
.reuse/: dep5
docs/: cluster.md  migration-guide.md  standalone.md
examples/: CMakeLists.txt  Makefile  async-ae.c  async-glib.c  async-ivykis.c  async-libev.c  async-libevent-ssl.c  async-libevent-tls.c  async-libevent.c  async-libhv.c  async-libsdevent.c  async-libuv.c  async-macosx.c  async-poll.c  async-qt.cpp  async-qt.h  async-valkeymoduleapi.c  blocking-push.c  blocking-ssl.c  blocking-tls.c  blocking.c  cluster-async-tls.c  cluster-async.c  cluster-clientside-caching-async.c  cluster-simple.c  cluster-tls.c
include/valkey/: alloc.h  async.h  cluster.h  cluster_ssl.h  cluster_tls.h  dict.h  net.h  rdma.h  read.h  sds.h  sockcompat.h  ssl.h  tls.h  valkey.h  valkey_rdma.h  valkey_ssl.h  valkeycluster.h  valkeycluster_ssl.h
include/valkey/adapters/: ae.h  glib.h  ivykis.h  libev.h  libevent.h  libhv.h  libsdevent.h  libuv.h  macosx.h  poll.h  qt.h  valkeymoduleapi.h
libvalkey/: CMakeLists.txt  Makefile  README.md  async.c  async.h  async_private.h  net.c  read.c  sockcompat.c  ssl.c  test.c  test.sh  valkey.c  valkey_ssl-config.cmake.in  valkey_ssl.h  valkey_ssl.pc.in
libvalkey/adapters/: glib.h  libev.h  libevent.h  libhv.h  macosx.h  qt.h
libvalkey/examples/: CMakeLists.txt  example-ivykis.c  example-libevent-ssl.c  example-libevent.c  example-push.c  example-qt.h  example-redismoduleapi.c  example.c
libvalkey/fuzzing/: format_command_fuzzer.c
libvalkeycluster/: adlist.c  command.c  dict.c  gencommands.py  valkeycluster.c  valkeycluster.h  valkeycluster_ssl.c  valkeycluster_ssl.h  vkarray.c  vkarray.h  vkutil.c
libvalkeycluster/adapters/: ae.h  glib.h  libev.h  libevent.h  libuv.h
libvalkeycluster/examples/src/: example.c  example_async.c  example_tls.c
libvalkeycluster/tests/: clusterclient.c  clusterclient_async.c  clusterclient_reconnect_async.c  ct_async.c  ct_async_glib.c  ct_async_libev.c  ct_async_libuv.c  ct_commands.c  ct_connection.c  ct_connection_ipv6.c  ct_out_of_memory_handling.c  ct_pipeline.c  ct_specific_nodes.c  main_async_tls.c  main_tls.c  test_utils.h  ut_parse_cmd.c
libvalkeycluster/tests/scripts/: ask-redirect-test.sh  cluster-down-test.sh  cluster-scale-down-test.sh  dbsize-to-all-nodes-during-scaledown-test.sh  moved-redirect-test.sh  moved-redirect-using-cluster-nodes-test.sh  reconnect-test.sh  redis-cluster  slots-not-served-test.sh  timeout-handling-test.sh
scripts/: format-files.sh  gencommands.py
src/: adlist.c  adlist.h  alloc.c  async.c  async.h  async_private.h  cluster.c  cluster_ssl.c  cluster_tls.c  cmddef.h  command.c  command.h  conn.c  dict.c  dict.h  dns.c  dns.h  ffc.h  fmacros.h  net.c  net.h  rdma.c  read.c  sds.c  sds.h  sdsalloc.h  sockcompat.c  sockcompat.h  ssl.c  tls.c  valkey.c  valkey.h  valkey_private.h  valkeycluster.c  valkeycluster.h  valkeycluster_ssl.c  valkeycluster_ssl.h  vkarray.c  vkarray.h  vkutil.c  (+2 more)
src/adaptable/: dict.c  sds.c
src/adapters/: ae.h  glib.h  ivykis.h  libev.h  libevent.h  libuv.h  macosx.h  poll.h  qt.h
tests/: CMakeLists.txt  client_test.c  clusterclient.c  clusterclient_async.c  clusterclient_reconnect_async.c  ct_async.c  ct_async_dns.c  ct_async_glib.c  ct_async_libev.c  ct_async_libuv.c  ct_commands.c  ct_connection.c  ct_connection_ipv6.c  ct_out_of_memory_handling.c  ct_pipeline.c  ct_specific_nodes.c  test.c  test.sh  test_invariant_net.c  test_utils.c  test_utils.h  ut_connect_fallback.c  ut_dns_cares.c  ut_parse_cmd.c  ut_slot_by_key.c  ut_slotmap_update.c
tests/scripts/: ask-redirect-connection-error-test.sh  ask-redirect-test.sh  ask-redirect-using-cluster-nodes-test.sh  client-disconnect-test.sh  client-disconnect-without-slotmap-update-test.sh  command-from-callback-test.sh  connect-during-cluster-startup-test.sh  connect-during-cluster-startup-using-cluster-nodes-test.sh  connection-error-test.sh  dbsize-to-all-nodes-during-scaledown-test-async.sh  dbsize-to-all-nodes-test.sh  moved-redirect-test.sh  redirect-with-hostname-test.sh  redirect-with-ipv6-test.sh  set-get-test.sh  slots-not-served-test-async.sh  slots-not-served-test.sh  timeout-handling-test.sh
